Fixed resizing glitch and flex/non-flex issues in admin
I had a few overlapping CSS rules that were adding confusion to the
current CSS. I removed many unecessary rules and moved the whole admin
left list to a flex paradigm as it was always the plan to be that way. I
guess the overlapping issues were due to my lack of understanding for
CSS Flex box

--- a/app/assets/stylesheets/admin/posts.css.scss
+++ b/app/assets/stylesheets/admin/posts.css.scss
@@ -3,6 +3,8 @@
     font-size: 1.2em;
     text-align: center;
     margin: 12px 0;
+    flex-grow: 0;
+    flex-shrink: 0;
   }
 }
 
@@ -32,9 +34,8 @@
 
     #actions {
       width: 100%;
-      height: 40px;
-      min-height: 40px;
-      display: inline-block;
+      flex-grow: 0;
+      flex-shrink: 0;
       background: rgb(214, 236, 235);
       border-bottom: 2px solid #BABABA;
       position: relative;
@@ -61,10 +62,9 @@
     }
 
     .list {
-      display: inline-block;
-      width: 100%;
       margin: 0;
       padding: 0;
+      flex-grow: 1;
 
       .post {
         padding: 12px 8px;
